[gd_scene load_steps=2 format=3 uid="uid://ug4imooux68t"]

[ext_resource type="Script" uid="uid://kyyfmk6itxgt" path="res://scripts/ui/bookmark_list_item.gd" id="1_e3x5i"]

[node name="BookmarkListItem" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_e3x5i")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ModeNameLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="InfoLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="DeleteButton" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "删除"
flat = true
